--- a/spare-parts.html
+++ b/spare-parts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -20,27 +20,38 @@
   <!--Header-->
 
   <header class="header">
-
     <button type="button" class="header__hamburger"></button>
-
     <div class="header__menu">
       <button type="button" class="header__btn-close-hamburger"></button>
       <nav class="nav-bar" id="myHeader">
         <div class="nav-bar__container">
           <ul class="nav-bar__list">
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar" href="./machines.html">Наша техника</a>
+              <a class="nav-bar__link text_style_navbar" href="./home.html">Главная
+              </a>
             </li>
-
-            <li class="nav-bar__item ">
-              <a class="nav-bar__link text_style_navbar" href="./services.html">Сервис</a>
+            <li class="nav-bar__item dropdown">
+              <a class="nav-bar__link text_style_navbar dropdown__btn" href="./machines.html">Наша техника
+              </a>
+              <div class="dropdown__content">
+                <a class="dropdown__link" href="./VZGM-90.html">Трактор&nbsp;ВЗГМ-90</a>
+                <a class="dropdown__link" href="./DT-75.html">Трактор&nbsp;ДТ-75</a>
+              </div>
+            </li>
+            <li class="nav-bar__item dropdown">
+              <a class="nav-bar__link text_style_navbar dropdown__btn" href="./services.html">Сервис</a>
+              <div class="dropdown__content">
+                <a class="dropdown__link" href="./Preventive-Maintenance.html">Техническое&nbsp;обслуживание</a>
+                <a class="dropdown__link" href="./general-maintenance.html">Капитальный&nbsp;ремонт</a>
+                <a class="dropdown__link" href="./current-maintenance.html">Профилактическое&nbsp;обслуживание</a>
+              </div>
             </li>
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./spare-parts.html">Запчасти</a>
+              <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./spare-parts.html">Запчасти
+              </a>
             </li>
-
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar" href="./index.html">О нас</a>
+              <a class="nav-bar__link text_style_navbar" href="./about.html">О нас</a>
             </li>
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar" href="./gallery.html">Галерея работ</a>
@@ -53,31 +64,55 @@
       </nav>
       <div class="header__topline">
         <div class="header__info">
-          <p class="header__hours header__icon text_style_bold-paragraph ">Понедельник - Пятница 8:00 - 19:00</p>
+          <p class="header__hours header__icon text_style_bold-paragraph">Понедельник - Пятница 8:00 -
+            19:00</p>
           <a class="header__tel header__icon text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7
-            (495) 577 27 10</a>
+            (495) 577 2710</a>
           <a class="header__address header__icon text_style_bold-paragraph link_style_regular"
-            href="https://yandex.uz/maps/-/CCUrB8SfgC">Волгоград, ул Переяславская д.20Б</a>
+            href="https://yandex.ru/maps/-/CCUKzMcXWC" target="_blank">Волгоград, ул Переяславская д.20Б</a>
         </div>
         <div class="social-media">
-          <a class="social-media__whatsap link_style_regular" href="https://wa.me/+79163909537"></a>
-          <a class="social-media__telegram link_style_regular" href="https://t.me/webtractor"></a>
+          <a class="social-media__whatsap link_style_regular" href="https://wa.me/+79163909537" target="_blank"></a>
+          <a class="social-media__telegram link_style_regular" href="https://t.me/webtractor" target="_blank"></a>
         </div>
       </div>
     </div>
-
-
-
   </header>
 
   <main class="content">
 
     <article class="page-title">
       <h2 class="page-title__header text_style_title-white">Запчасти</h2>
+      <div class="page-title__path-container">
+        <a class="page-title__link" href="./home.html">Главная</a>
+        <span class="page-title__separator"> &nbsp;&nbsp;/&nbsp;&nbsp; </span>
+        <p class="page-title__directory">Запчасти</p>
+      </div>
     </article>
 
     <section class="cards-grid section-box">
 
+    </section>
+
+    <!-- Find us section -->
+    <section class="find-us">
+      <div style="position:relative;overflow:hidden;filter: brightness(.8);">
+        <a href="https://yandex.uz/maps/org/volgogradskiy_zavod_gusenichnykh_mashin/207259154331/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eee;font-size:12px;position:absolute;top:0px;" target="_blank">Волгоградский завод гусеничных
+          машин
+        </a>
+        <a href="https://yandex.uz/maps/38/volgograd/category/special_equipment_special_vehicles/184106622/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eee;font-size:12px;position:absolute;top:14px;" target="_blank">Спецтехника и спецавтомобили в
+          Волгограде
+        </a>
+        <a href="https://yandex.uz/maps/38/volgograd/category/industrial_enterprise/184106880/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eee;font-size:12px;position:absolute;top:28px;" target="_blank">Производственное предприятие в
+          Волгограде
+        </a>
+        <iframe
+          src="https://yandex.uz/map-widget/v1/?display-text=%D0%B2%D0%B7%D0%B3%D0%BC&from=tabbar&ll=44.604047%2C48.822849&mode=search&oid=207259154331&ol=biz&sll=37.683868%2C55.613095&source=serp_navig&sspn=0.119133%2C0.039835&text=%D0%B2%D0%B7%D0%B3%D0%BC&utm_source=share&z=13"
+          width="100%" height="450" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe>
+      </div>
     </section>
 
   </main>
@@ -186,9 +221,10 @@
   </template>
 
   <script src="./script-js/preloader.js"> </script>
+  <script src="./script-js/product.js"></script>
   <script src="./script-js/sticky-menu.js"></script>
   <script src="./script-js/burger-menu.js"></script>
-  <script src="./script-js/spare-parts.js"></script>
+  <script type="module" src="./script-js/spare-parts.js"></script>
 
 
 </body>
